# credit-risk-engine

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.test  Makefile  README.md  cloudbuild-backend.yaml  cloudbuild-editor-frontend.yaml  cloudbuild-editor.yaml  cloudbuild-embed.yaml  cloudbuild-gateway.yaml  cloudbuild-ingest.yaml  cloudbuild-retrieval.yaml  cloudbuild-test.yaml  create_tables.py  docker-compose.dev.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-test.yml  deploy.yml  terraform.yml  train.yml
apps/editor-frontend/: Dockerfile  next.config.js  package.json  tsconfig.json
apps/gateway-api/: requirements.txt
apps/ideahunter-frontend/: next.config.js  package.json  tsconfig.json
config/: defaults.yaml  dev.yaml  prod.yaml  sanitization.json  test.yaml
configs/: data.yaml  model.yaml  serving.yaml
dev/: compose.yaml  env.example
docker/: Dockerfile.serve  Dockerfile.train  docker-compose.yml  prometheus.yml
docs/: envs.md  mock-data-inventory.md  release-process.md  runbook.md
infra/docker/: Dockerfile.nextjs  Dockerfile.python
scripts/: build-and-push.sh  create-and-push.sh  deploy-prod.sh  dev-setup.sh  download_data.py  drift_demo.py  evaluate.py  generate_data.py  manage-embeddings.py  migrate-db.sh  preflight_check.py  push-to-github.sh  sanitize_from_prod.py  serve.py  setup-cloud-deployment.sh  setup-env-resources.sh  setup-github-deployment.sh  setup-secrets.sh  setup_db.py  train.py  train_tf.py
tests/: conftest.py
(+128 files in other folders)
