[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-scoring"
version = "0.1.0"
description = "Production credit scoring system with PD, LGD, EAD models and real-time scoring API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "scikit-learn>=1.3.2",
    "xgboost>=2.0.2",
    "lightgbm>=4.1.0",
    "shap>=0.43.0",
    "optuna>=3.4.0",
    "mlflow>=2.9.0",
    "tensorflow>=2.15.0",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "scipy>=1.11.4",
    "PyYAML>=6.0.1",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "httpx>=0.25.2",
    "faker>=20.1.0",
    "joblib>=1.3.2",
    "pyarrow>=14.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
